@@ -31,6 +31,9 @@
 
 	<LI>Added multiple header/footer image support.
 
+	<li>Links to external URLs are now resolved so that the
+	output file can be moved without affecting them.</li>
+
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
 	<LI>The command-line now allows --fontsize values from 4
