@@ -1,4 +1,4 @@
-CHANGES.txt - 04/02/2004
+CHANGES.txt - 04/15/2004
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.24
@@ -18,6 +18,8 @@ CHANGES IN HTMLDOC v1.8.24
 	- Added support for HP LaserJet 5000 and Xerox DocuPrint
 	  2000/100 printer commands.
 	- Added multiple header/footer image support.
+	- Links to external URLs are now resolved so that the
+	  output file can be moved without affecting them.
 
     CHANGES
 
